api server to test ZGC